--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -10,14 +10,14 @@ jobs:
   build:
 
     name: Build and test
-    runs-on: ubuntu-latest
+    runs-on: macos-11
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
       uses: erlef/setup-elixir@885971a72ed1f9240973bd92ab57af8c1aa68f24
       with:
-        elixir-version: '1.12'
+        elixir-version: '1.12.3'
         otp-version: '24.0.1'
     - name: Restore dependencies cache
       uses: actions/cache@v2
